<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nouninterpretation"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_alef_me" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/shallowgrey" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="东方明珠"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/translation"
                android:textColor="@color/transcontent"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="the Oriental Pearl Tower"
                android:textColor="@color/bule"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/shallowwhite" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/moreinter"
                android:textColor="@color/transcontent"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="东方明珠广播电视塔（The Oriental Pearl Radio  TV Tower）是上海的标志性文化景观之一，位于浦东新区陆家嘴，塔高约468米。该建筑于1991年7月兴建，1995年5月投入使用，承担上海6套无线电视发射业务，地区覆盖半径80公里。[1-3]
    东方明珠广播电视塔是国家首批AAAAA级旅游景区。塔内有太空舱、旋转餐厅、上海城市历史发展陈列馆等景观和设施，1995年被列入上海十大新景观之一"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="The Oriental Pearl TV Tower, one of Shanghai's iconic cultural landscape, located in Pudong New Area, Lujiazui, about 468 meters high tower. The building was built in July 1991 and was put into operation in May 1995. It has undertaken 6 sets of radio television transmission services in Shanghai, covering a radius of 80 km. [1-3]
    The Oriental Pearl TV Tower is one of the first AAAAA tourist attractions in the country. The tower has a space capsule, a revolving restaurant, Shanghai city history museum landscape and facilities, 1995 was included in one of the ten Shanghai landscape"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/linkimage"
                android:textColor="@color/transcontent"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/dfmz" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/dfmz" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/dfmz" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/url"
                android:textColor="@color/transcontent"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="https://baike.baidu.com/item/%E4%B8%9C%E6%96%B9%E6%98%8E%E7%8F%A0%E5"
                android:textColor="#FF595959" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="词条最近更新：2017-08-13 16:00"
                android:textColor="#FF595959"
                android:textSize="16sp" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>