<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_qie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_alef_me" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_alef_edit" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/shallowgrey" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="visible">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/background"
                android:paddingBottom="10dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/editcontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@color/shallogreen"
                    android:text="你好请问怎么去东方明珠"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_alef_play" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowblue" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="Hello,how do i get to the Oeiental Pearrl Tower"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/result"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_alef_play" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:id="@+id/ll1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="50dp"
                        android:background="@drawable/circlr_bg1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="30dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/ic_alef_record" />

                        <TextView
                            android:id="@+id/tv1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/holdspeak"
                            android:textColor="@color/bule" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/circlr_bg2"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img2"
                            android:layout_width="30dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/ic_alef_record2" />

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/holdspeak2"
                            android:textColor="@color/white" />
                    </LinearLayout>


                </RelativeLayout>


            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:visibility="gone" />


    </RelativeLayout>


</LinearLayout>